# projects-api

./: LICENSE  README.md  deta.json  main.py  pyproject.toml  requirements.txt  runserver.sh
app/: endpoints.py  main.py  schemas.py
app/core/: config.py
app/templates/: home.html
micro/: main.py  schemas.py
micro/core/: deta.py
