[tool.poetry]
name = "projects-api"
version = "0.1.0"
description = ""
authors = ["Tobi-De <tobidegnon@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
ujson = "^4.2.0"
Jinja2 = "^3.0.2"
deta = "^1.0.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
